2012-09-27  Jerome Roovers  <jer@gentoo.org>

	* src/tests/passthrough.test: Remove obsolete "+2" arguments to
	tail.

2012-09-25  Tim Retout  <diocles@gnu.org>

	* configure.ac: Release 1.6.6.

2012-09-19  Tim Retout  <diocles@gnu.org>

	* NEWS: Update for new release.

	* afm/MustRead.html: New file containing licensing of Adobe AFM
	files.  Savannah bug #35883.

2011-07-10  Tim Retout  <diocles@gnu.org>

	* po/: Sync all translations from the Translation Project.

	* compat/gettext.h: New file.
	* compat/Makefile.am (EXTRA_DIST): Add gettext.h.
	* src/gsint.h: Use gettext.h instead of own libintl.h include.
	* src/mkafmmap.c: Likewise.
	* states/defs.h: Likewise.

	* src/main.c (main): Join ENSCRIPT_LIBRARY error string together
	for the benefit of translators.
	Use ngettext when printing number of pages/copies.

	* states/hl/mail.st: Support extended mail headers.
	Savannah bug #25440.

	* src/main.c (usage): Clarify documentation for short forms of
	optional arguments.

2011-07-09  Tim Retout  <diocles@gnu.org>

	* src/main.c (handle_options): Add missing 'w' from
	getopt_long call. Savannah bug #30651.

	Apply patch 393791-sliceprint from Debian:
	* scripts/sliceprint.1: Complete documentation.
	* scripts/sliceprint.in: Force C locale.
	Use more liberal regexp when parsing wrapped lines message.
	Add missing space from before args. Savannah bug #31259.

	* Makefile.am (SUBDIRS): Move intl to be built before compat.

	* states/Makefile.am: Use $(datadir) instead of $(prefix)/share.
	  Savannah bug #31609.
	* src/Makefile.am: Likewise.

	* src/Makefile.am: Remove ansi2knr option and supporting files.
	* afmlib/Makefile.am: Likewise.

	* states/utils.c (eval_expr): Fix typo in error string.
	* states/main.c (usage): Fix typo in --define usage string.

2010-09-10  W. Trevor King  <wking@drexel.edu>

	* docs/FAQ.html: Fix typo.

2010-06-02  Tim Retout  <diocles@gnu.org>

	Fix Savannah bug #28769 (segfault when parsing config file).
